# template-builder

./: .editorconfig  .gitignore  Pipfile  README  README.md  cairo.py  check.py  combine.sh  dodo.py  drupal-action.yml  exlude.sh  generate-readme.py  list.py  main.py  migrate.py  notes.md  old-workflow.yaml  project-issues.yaml  pyproject.toml  readme-builder.py  requirements.txt  setup.cfg  setup.py  test.md  test.sh  update_template.sh
drupal7/: Makefile
drupal7-vanilla/: Makefile  allow-settings-files.patch
drupal7_vanilla/: Makefile
drupal8/: Makefile  dodo.py
etc/: update_template.sh
laravel/: README.md  phpredis.patch
magento2ce/: platformsh.patch
migrations/: akeneo.migrate.json  aspnet-core.migrate.json  backdrop.migrate.json  beego.migrate.json  contentacms.migrate.json  directus.migrate.json  django2.migrate.json  django3.migrate.json  django4.migrate.json  drupal8-govcms8.migrate.json  drupal8-multisite.migrate.json  drupal8-opigno.migrate.json  drupal8.migrate.json  drupal9-multisite.migrate.json  drupal9.migrate.json  echo.migrate.json  elastic-apm.migrate.json  eleventy-strapi.migrate.json  (+55 more)
templates/django4/files/: .environment  .gitignore  .platform.app.yaml  Pipfile  README.md  pyproject.toml  requirements.txt
templates/django4/files/.platform/: applications.yaml  pip.app.yaml  pipenv.app.yaml  poetry.app.yaml  services.yaml
templates/django4/files/.platform/local/: project.yaml
templates/django4/files/hello/: views.py
templates/django4/files/hello/templates/: base.html
templates/django4/files/myapp/: settings.py
templates/flask/files/: .blackfire.yml  .environment  .platform.app.yaml  .platform.template.yaml  Pipfile  README.md  install-poetry.sh  pyproject.toml  requirements.txt  server.py
templates/flask/files/.platform/: routes.yaml  services.yaml
templates/meilisearch/files/search/: .environment  .gitignore  .platform.app.yaml  build.sh  pyproject.toml  start.sh  update_demo_index.py
(+2236 files in other folders)
