[tool.poetry]
name = "platformsh-django4"
version = "0.1.0"
description = "A Platform.sh starter for Django 4"
authors = ["chadcarlson <chad.carlson@platform.sh>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.1"
psycopg2-binary = "^2.9.3"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
