[tool.poetry]
name = "platformsh-flask"
version = "0.1.0"
description = ""
authors = ["chadcarlson <chad.carlson@platform.sh>"]
license = "BSD-3"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.1.2"
redis = "^4.2.2"
PyMySQL = "^1.0.2"
gevent = "^21.12.0"
platformshconfig = "^2.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
