[tool.poetry]
name = "meilisearch-template"
version = "0.1.0"
description = "Meilisearch template for Platform.sh"
authors = ["Platform.sh"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
meilisearch = "^=0.13.0"
platformshconfig = "^2.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
